Added some CSS to a new portfolio page

--- a/new/index.html
+++ b/new/index.html
@@ -22,7 +22,7 @@
 	<meta property="og:site_name" content="">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
-	<title>Portfolio | Home</title>
+	<title>Home | Alex Negodiaev</title>
 	<link href="./css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="js/html5.js"></script>
@@ -30,48 +30,166 @@
   <![endif]-->
 </head>
 <body class="home">
+	<section id="hero" class="section hero"
+	style="background-image: url(./images/bg-hero.jpg)">
+		<div class="hero-content">
+			<h1 class="hero__title hero__title--hidden">Alex Negodiaev
+				<span class="hero__title-description">Portfolio webpage</span></h1>
+		</div>
+		<!-- /.hero-content -->
+	</section>
+	<!-- /#hero.section hero -->
+	<header class="page-header">
+	  <div class="grid-container">
+	    <div class="grid-100">
+	      Header content
+	    </div>
+	    <!-- grid -->
+	  </div>
+	  <!-- /.grid-container -->
+	</header>
+	<!-- /.page-header -->
 	<main class="main">
-		<header class="page-header">
-		  <div class="grid-container">
-		    <div class="grid-100">
-		      Header content
-		    </div>
-		    <!-- grid -->
-		  </div>
-		  <!-- /.grid-container -->
-		</header>
-		<!-- /.page-header -->
-		<div class="grid-container">
-			<div class="grid-100">
-				<h1>Projects</h1>
+		<section id="about" class="section section-white about">
+			<div class="grid-container">
+				<div class="grid-100">
+					<h2 class="section__title">About Me</h2>
+					<div class="about-content">
+						<img src="./images/author.jpg" class="about__photo" alt="Author's image">
+						<p class="about__text">Hi! I'm Alex from Perm, Russia. I'm a Front End developer with two years of experience and I have good HTML, CSS, JavaScript skills. For creating my previous works were being used following instruments and technologies: HTML(5), CSS(3), Javascript (Vanilla JS, jQuery), SASS (SCSS), BEM, SMACSS, Bootstrap(3, 4), Gulp, Git, AJAX and JSON.</p>
+						<p class="about__text">Currently I specialize in PSD to HTML conversion, also learn React library and actively use Javascript ES6/ES2015 (with Babel), Webpack, NPM (with Node.js), Web APIs for crafting my training projects.</p>
+					</div>
+				</div>
+				<!-- grid -->
 			</div>
-			<!-- grid -->
-		</div>
-		<!-- /.grid-container -->
-		<div class="grid-container">
-			<div class="grid-100">
-				<p>Projects info</p>
+			<!-- /.grid-container -->
+		</section>
+		<!-- /.section about -->
+		<section id="projects" class="section projects">
+			<div class="grid-container">
+				<div class="grid-100">
+					<h2 class="section__title">Projects</h2>
+				</div>
+				<!-- grid -->
+				<div class="grid-100">
+					<p class="section__info projects__info">In the section You can look at some of my works.</p>
+				</div>
+				<!-- grid -->
 			</div>
-			<!-- grid -->
-		</div>
-		<!-- /.grid-container -->
-
-
-		<div class="projects">
+			<!-- /.grid-container -->
 			<div id="projects-container" class="grid-container">
 
 			</div>
 			<!-- /.grid-container -->
-		</div>
-		<!-- /.projects -->
-
+		</section>
+		<!-- /.section projects -->
 
 	</main>
 	<!-- /.main -->
-	<footer class="page-footer">
+	<footer class="page-footer section"
+	        style="background-image: url(./images/bg-hero.jpg)">
 	  <div class="grid-container">
 	    <div class="grid-100">
-	      Footer content
+	      <div class="page-footer-content">
+	        <h2 class="section__title section__title--light page-footer__title">Contact</h2>
+	        <table class="page-footer__contact">
+	          <tr class="page-footer__contact-row">
+	            <td class="page-footer__contact-col page-footer__contact-col-1">
+	              <svg xmlns="http://www.w3.org/2000/svg"
+	                   xmlns:xlink="http://www.w3.org/1999/xlink"
+	                   version="1.1"
+	                   id="page-footer__contact-icon-email"
+	                   x="0px" y="0px" viewBox="0 0 14 14"
+	                   xml:space="preserve"
+	                   class="page-footer__contact-icon">
+	              <g>
+	              	<g>
+	              		<path d="M7,9L5.268,7.484l-4.952,4.245C0.496,11.896,0.739,12,1.007,12h11.986    c0.267,0,0.509-0.104,0.688-0.271L8.732,7.484L7,9z" fill="#fff"/>
+	              		<path d="M13.684,2.271C13.504,2.103,13.262,2,12.993,2H1.007C0.74,2,0.498,2.104,0.318,2.273L7,8    L13.684,2.271z" fill="#fff"/>
+	              		<polygon points="0,2.878 0,11.186 4.833,7.079   " fill="#fff"/>
+	              		<polygon points="9.167,7.079 14,11.186 14,2.875   " fill="#fff"/>
+	              	</g>
+	              </g>
+	              </svg>
+	              <span class="page-footer__contact-item">E-mail:</span>
+	            </td>
+	            <td class="page-footer__contact-col page-footer__contact-col-2">
+	              <a href="mailto:alex.negodiaev@gmail.com"
+	                 class="page-footer__contact-link"
+	                 target="_blank">
+	                alex.negodiaev@gmail.com
+	              </a>
+	            </td>
+	          </tr>
+	          <tr class="page-footer__contact-row">
+	            <td class="page-footer__contact-col page-footer__contact-col-1">
+	              <svg version="1.1"
+	                   id="page-footer__contact-icon-skype"
+	                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+	                   x="0px" y="0px"
+	            	     viewBox="0 0 430.123 430.123"
+	                	 xml:space="preserve"
+	                   class="page-footer__contact-icon">
+	              <g>
+	                <path id="Skype" d="M412.164,246.198c1.605-10.155,2.45-20.544,2.45-31.148c0-110.215-89.342-199.555-199.56-199.555   c-10.576,0-20.995,0.871-31.141,2.458C165.534,6.581,143.842,0,120.595,0C53.996,0,0.005,53.984,0.005,120.59   c0,23.242,6.585,44.916,17.952,63.332c-1.573,10.172-2.439,20.528-2.439,31.132c0,110.223,89.34,199.536,199.532,199.536   c10.585,0,21.007-0.816,31.152-2.417c18.398,11.35,40.072,17.949,63.314,17.949c66.617,0,120.602-53.998,120.602-120.602   C430.123,286.269,423.542,264.6,412.164,246.198z M309.801,305.81c-8.442,12.153-20.843,21.65-37.047,28.479   c-16.237,6.847-35.428,10.254-57.59,10.254c-26.562,0-48.554-4.648-65.913-14.034c-12.305-6.721-22.313-15.737-30.007-26.98   c-7.71-11.252-11.619-22.271-11.619-33.015c0-6.338,2.417-11.85,7.122-16.344c4.754-4.527,10.877-6.796,18.104-6.796   c5.92,0,11.005,1.783,15.145,5.316c4.109,3.532,7.556,8.667,10.375,15.443c3.379,7.85,7.049,14.412,10.954,19.648   c3.881,5.171,9.343,9.488,16.417,12.867c6.996,3.388,16.307,5.082,27.958,5.082c15.945,0,28.831-3.449,38.693-10.253   c9.912-6.866,14.673-15.22,14.673-25.314c0-8.051-2.567-14.445-7.831-19.43c-5.312-5.05-12.172-8.896-20.685-11.579   c-8.546-2.711-20.02-5.586-34.399-8.615c-19.308-4.214-35.456-9.119-48.533-14.752c-13.094-5.654-23.522-13.383-31.251-23.146   c-7.745-9.859-11.607-22.113-11.607-36.627c0-13.84,4.077-26.217,12.239-36.989c8.158-10.802,19.961-19.07,35.351-24.829   c15.336-5.757,33.391-8.637,54.075-8.637c16.541,0,30.849,1.914,42.96,5.722c12.078,3.836,22.146,8.898,30.196,15.25   c7.999,6.338,13.885,13.023,17.613,20.038c3.725,7.036,5.601,13.908,5.601,20.614c0,6.235-2.417,11.89-7.127,16.846   c-4.709,4.963-10.733,7.493-17.768,7.47c-6.342,0-11.317-1.463-14.767-4.56c-3.36-2.996-6.889-7.766-10.706-14.414   c-4.825-9.276-10.604-16.503-17.324-21.672c-6.543-5.073-17.338-7.714-32.359-7.682c-13.898,0-25.018,2.84-33.411,8.394   c-8.445,5.643-12.482,12.19-12.501,19.861c0.014,4.807,1.396,8.86,4.177,12.326c2.824,3.498,6.753,6.529,11.803,9.084   c5.052,2.595,10.191,4.602,15.355,6.046c5.225,1.481,13.894,3.622,25.944,6.457c15.112,3.257,28.819,6.896,41.136,10.862   c12.293,3.986,22.784,8.793,31.451,14.52c8.736,5.71,15.564,12.99,20.438,21.783c4.909,8.807,7.354,19.564,7.354,32.222   C322.509,279.968,318.263,293.676,309.801,305.81z" fill="#fff"/>
+	              </g>
+	              </svg>
+	              <span class="page-footer__contact-item">Skype:</span>
+	            </td>
+	            <td class="page-footer__contact-col page-footer__contact-col-2">
+	              alex.negodiaev
+	            </td>
+	          </tr>
+	          <tr class="page-footer__contact-row">
+	            <td class="page-footer__contact-col page-footer__contact-col-1">
+	              <svg xmlns="http://www.w3.org/2000/svg"
+	                   xmlns:xlink="http://www.w3.org/1999/xlink"
+	                   version="1.1"
+	                   id="page-footer__contact-icon-github"
+	                   x="0px" y="0px"
+	                   viewBox="0 0 438.549 438.549"
+	                   xml:space="preserve"
+	                   class="page-footer__contact-icon">
+	              <g>
+	              	<path d="M409.132,114.573c-19.608-33.596-46.205-60.194-79.798-79.8C295.736,15.166,259.057,5.365,219.271,5.365   c-39.781,0-76.472,9.804-110.063,29.408c-33.596,19.605-60.192,46.204-79.8,79.8C9.803,148.168,0,184.854,0,224.63   c0,47.78,13.94,90.745,41.827,128.906c27.884,38.164,63.906,64.572,108.063,79.227c5.14,0.954,8.945,0.283,11.419-1.996   c2.475-2.282,3.711-5.14,3.711-8.562c0-0.571-0.049-5.708-0.144-15.417c-0.098-9.709-0.144-18.179-0.144-25.406l-6.567,1.136   c-4.187,0.767-9.469,1.092-15.846,1c-6.374-0.089-12.991-0.757-19.842-1.999c-6.854-1.231-13.229-4.086-19.13-8.559   c-5.898-4.473-10.085-10.328-12.56-17.556l-2.855-6.57c-1.903-4.374-4.899-9.233-8.992-14.559   c-4.093-5.331-8.232-8.945-12.419-10.848l-1.999-1.431c-1.332-0.951-2.568-2.098-3.711-3.429c-1.142-1.331-1.997-2.663-2.568-3.997   c-0.572-1.335-0.098-2.43,1.427-3.289c1.525-0.859,4.281-1.276,8.28-1.276l5.708,0.853c3.807,0.763,8.516,3.042,14.133,6.851   c5.614,3.806,10.229,8.754,13.846,14.842c4.38,7.806,9.657,13.754,15.846,17.847c6.184,4.093,12.419,6.136,18.699,6.136   c6.28,0,11.704-0.476,16.274-1.423c4.565-0.952,8.848-2.383,12.847-4.285c1.713-12.758,6.377-22.559,13.988-29.41   c-10.848-1.14-20.601-2.857-29.264-5.14c-8.658-2.286-17.605-5.996-26.835-11.14c-9.235-5.137-16.896-11.516-22.985-19.126   c-6.09-7.614-11.088-17.61-14.987-29.979c-3.901-12.374-5.852-26.648-5.852-42.826c0-23.035,7.52-42.637,22.557-58.817   c-7.044-17.318-6.379-36.732,1.997-58.24c5.52-1.715,13.706-0.428,24.554,3.853c10.85,4.283,18.794,7.952,23.84,10.994   c5.046,3.041,9.089,5.618,12.135,7.708c17.705-4.947,35.976-7.421,54.818-7.421s37.117,2.474,54.823,7.421l10.849-6.849   c7.419-4.57,16.18-8.758,26.262-12.565c10.088-3.805,17.802-4.853,23.134-3.138c8.562,21.509,9.325,40.922,2.279,58.24   c15.036,16.18,22.559,35.787,22.559,58.817c0,16.178-1.958,30.497-5.853,42.966c-3.9,12.471-8.941,22.457-15.125,29.979   c-6.191,7.521-13.901,13.85-23.131,18.986c-9.232,5.14-18.182,8.85-26.84,11.136c-8.662,2.286-18.415,4.004-29.263,5.146   c9.894,8.562,14.842,22.077,14.842,40.539v60.237c0,3.422,1.19,6.279,3.572,8.562c2.379,2.279,6.136,2.95,11.276,1.995   c44.163-14.653,80.185-41.062,108.068-79.226c27.88-38.161,41.825-81.126,41.825-128.906   C438.536,184.851,428.728,148.168,409.132,114.573z" fill="#fff"/>
+	              </g>
+	              </svg>
+	              <span class="page-footer__contact-item">Github:</span>
+	            </td>
+	            <td class="page-footer__contact-col page-footer__contact-col-2">
+	              <a href="https://github.com/negodiaev"
+	                 class="page-footer__contact-link"
+	                 target="_blank">
+	                github.com/negodiaev
+	              </a>
+	            </td>
+	          </tr>
+	          <tr class="page-footer__contact-row">
+	            <td class="page-footer__contact-col page-footer__contact-col-1">
+	              <svg xmlns="http://www.w3.org/2000/svg"
+	                   xmlns:xlink="http://www.w3.org/1999/xlink"
+	                   version="1.1"
+	                   id="page-footer__contact-icon-codepen"
+	                   x="0px" y="0px"
+	                   viewBox="0 0 31.665 31.665"
+	                   xml:space="preserve"
+	                   class="page-footer__contact-icon">
+	              <g>
+	              	<path d="M16.878,0.415c-0.854-0.565-1.968-0.552-2.809,0.034L1.485,9.214c-0.671,0.468-1.071,1.233-1.071,2.052v9.444   c0,0.84,0.421,1.623,1.122,2.086l12.79,8.455c0.836,0.553,1.922,0.553,2.758,0l13.044-8.618c0.7-0.463,1.122-1.246,1.122-2.086   v-9.279c0-0.839-0.421-1.622-1.121-2.085L16.878,0.415z M26.621,10.645l-4.821,3.237l-4.521-3.288L17.25,4.127L26.621,10.645z    M13.979,4.133v6.329l-4.633,3.24l-4.621-3.099L13.979,4.133z M3.458,13.722l2.991,2.004l-2.991,2.093V13.722z M14.058,27.215   l-9.331-6.258l4.661-3.258l4.67,3.133V27.215z M12.286,15.674l3.021-2.113l3.519,2.313l-3.119,2.095L12.286,15.674z M17.354,27.215   V20.83l4.463-2.991l4.805,3.159L17.354,27.215z M27.954,17.927l-3.168-2.082l3.168-2.125V17.927z" fill="#fff"/>
+	              </g>
+	              </svg>
+	              <span class="page-footer__contact-item">Codepen:</span>
+	            </td>
+	            <td class="page-footer__contact-col page-footer__contact-col-2">
+	              <a href="https://codepen.io/alex_n/"
+	                 class="page-footer__contact-link"
+	                 target="_blank">
+	                codepen.io/alex_n
+	              </a>
+	            </td>
+	          </tr>
+	        </table>
+	      </div>
 	    </div>
 	    <!-- grid -->
 	  </div>
