--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</div>
 				<!-- grid -->
 				<div class="grid-100">
-					<p class="section__info projects__info">In the section You can look at some of my works.</p>
+					<p class="section__info projects__info">In the section you can look at some of my works.</p>
 				</div>
 				<!-- grid -->
 			</div>
