Added Pahu Design project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body class="home">
 	<section id="hero" class="section hero">
 		<div class="hero-content">
-			<h1 class="hero__title hero__title--hidden">Alex Negodiaev
+			<h1 class="hero__title">Alex Negodiaev
 				<span class="hero__title-description">Portfolio webpage</span></h1>
 		</div>
 		<!-- /.hero-content -->
