Updated paths to sources

--- a/projects/pahu/index.html
+++ b/projects/pahu/index.html
@@ -122,15 +122,15 @@
             <div class="section-title light">why choose us</div>
           </div>
         </div>
-        <div class="advantages-content" style="background-image: url(./../images/advantages/bg.png);">
+        <div class="advantages-content" style="background-image: url(./images/advantages/bg.png);">
           <div class="grid-container">
             <div class="grid-35 tablet-grid-50">
               <ul class="advantages-list left">
-                <li class="advantage" style="background-image: url(./../images/advantages/icon-1.png);">
+                <li class="advantage" style="background-image: url(./images/advantages/icon-1.png);">
                   <div class="advantage-title">Modern design</div>
                   <p class="advantage-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="advantage" style="background-image: url(./../images/advantages/icon-2.png);">
+                <li class="advantage" style="background-image: url(./images/advantages/icon-2.png);">
                   <div class="advantage-title">Unique quality</div>
                   <p class="advantage-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
@@ -138,11 +138,11 @@
             </div>
             <div class="grid-35 prefix-30 tablet-grid-50">
               <ul class="advantages-list right">
-                <li class="advantage" style="background-image: url(./../images/advantages/icon-3.png);">
+                <li class="advantage" style="background-image: url(./images/advantages/icon-3.png);">
                   <div class="advantage-title">Honest prices</div>
                   <p class="advantage-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="advantage" style="background-image: url(./../images/advantages/icon-4.png);">
+                <li class="advantage" style="background-image: url(./images/advantages/icon-4.png);">
                   <div class="advantage-title">Great support</div>
                   <p class="advantage-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
@@ -753,10 +753,10 @@
         <div class="grid-33 pull-66 tablet-grid-100"><a class="logo" href="#"><img src="./images/logo.png" width="271" height="42" alt="Website logo"></a>
           <div class="scl">
             <ul class="scl-list">
-              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./../images/scl/f.png);"></a></li>
-              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./../images/scl/g.png);"></a></li>
-              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./../images/scl/t.png);"></a></li>
-              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./../images/scl/y.png);"></a></li>
+              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./images/scl/f.png);"></a></li>
+              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./images/scl/g.png);"></a></li>
+              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./images/scl/t.png);"></a></li>
+              <li class="scl-item"><a class="scl-item-link" href="#" style="background-image: url(./images/scl/y.png);"></a></li>
             </ul>
           </div>
         </div>
