Added a projects loading button

--- a/index.html
+++ b/index.html
@@ -197,5 +197,6 @@
 	<!-- <script src="./js/jquery.js"></script> -->
 	<!-- <script src="./js/library.js"></script> -->
 	<script src="./js/main.js"></script>
+	<script src="./js/ga.js"></script>
 </body>
 </html>
