Added lazy loading of projects and updated backgrounds

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<!-- grid -->
 			</div>
 			<!-- /.grid-container -->
-			<div id="projects-container" class="grid-container">
+			<div id="projects-container" class="projects-container grid-container">
 
 			</div>
 			<!-- /.grid-container -->
