chore: update the photo, about and styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<meta property="og:site_name" content="">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="address=no">
-	<title>Home | Alex Negodiaev</title>
+	<title>Home | Alexander Negodiaev</title>
 	<link href="./css/styles.css" rel="stylesheet">
 	<!--[if lt IE 9]>
     <script src="js/html5.js"></script>
@@ -32,7 +32,7 @@
 <body class="home">
 	<section id="hero" class="section hero">
 		<div class="hero-content">
-			<h1 class="hero__title">Alex Negodiaev
+			<h1 class="hero__title">Alexander Negodiaev
 				<span class="hero__title-description">Portfolio webpage</span></h1>
 		</div>
 		<!-- /.hero-content -->
@@ -55,8 +55,11 @@
 					<h2 class="section__title">About Me</h2>
 					<div class="about-content">
 						<img src="./images/author.jpg" class="about__photo" alt="Author's image">
-						<p class="about__text">Hi! I'm Alex from Perm, Russia. I'm a Front End developer with two years of experience and I have good HTML, CSS, JavaScript skills. For creating my previous works were being used following instruments and technologies: HTML(5), CSS(3), Javascript (Vanilla JS, jQuery), SASS (SCSS), BEM, SMACSS, Bootstrap(3, 4), Gulp, Git, AJAX and JSON.</p>
-						<p class="about__text">Currently I specialize in PSD to HTML conversion, also learn React library and actively use Javascript ES6/ES2015 (with Babel), Webpack, NPM (with Node.js), Web APIs for crafting my training projects.</p>
+						<p class="about__text">Hi! I'm Alexander from Perm, Russia. I'm a Frontend developer with at least two and a half years of experience. Currently I specialize in the creation of components and pages, as well as the implementation of client logic using the JS(TypeScript)/React/MobX/Styled Components technology stack.</p>
+						<p class="about__text">Before that, I worked as a freelancer for about four years. Basically, I was engaged in adaptive layout of small corporate sites (5-10 pages), online stores, Landing Pages and promo pages for the Russian and foreign markets.</p>
+						<p class="about__text">I have good skills in HTML, CSS, JS (TypeScript), React, plus good visual perception, excellent taste (I see what looks beautiful and what doesn’t and I can imagine how it can be improved). Everything is ok with English — I read technical documentation and articles in the original.</p>
+						<p class="about__text">In my work I use the following technologies and tools: JS(Typescript), React, MobX, Styled components, SASS(SCSS), BEM, HTML, CSS, SVG, Pug, AJAX(JSON), Webpack, Git, NPM. With layouts, I mainly work in Figma, but I also have experience with Sketch, Adobe Photoshop and Adobe Illustrator.</p>
+						<p class="about__text">In addition to the above, I tried SMACSS, Less, Stylus, Bootstrap(3, 4), jQuery, Vue.js, Gulp, Redux, Web APIs, PHP(Wordpress).</p>
 					</div>
 				</div>
 				<!-- grid -->
